# hospital-delivery-system

./: .gitignore  README.md
.claude/: project.md
backend/: requirements.txt
backend/app/: main.py
backend/app/config/: settings.py
backend/app/constants/: enums.py  mqtt_topics.py  ws_events.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  abnormal_event.py  inventory.py  location.py  robot.py  task.py
backend/app/mqtt/: client.py  handlers.py
backend/app/routers/: abnormal_events.py  auth.py  inventory.py  locations.py  robot.py  tasks.py
backend/app/scheduler/: dispatcher.py
backend/app/schemas/: abnormal_event.py  auth.py  inventory.py  location.py  robot.py  task.py
backend/app/services/: abnormal_event_service.py  auth_service.py  inventory_service.py  robot_service.py  task_service.py
backend/app/utils/: location_utils.py
backend/app/websocket/: manager.py  router.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/seeds/: seed_locations.py
docs/: mqtt_integration_spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: abnormalEvents.ts  auth.ts  client.ts  inventory.ts  locations.ts  robot.ts  tasks.ts
frontend/src/components/: BedSelector.tsx  InventoryTable.tsx  ProtectedRoute.tsx  RobotStatusBanner.tsx  TaskCard.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: LoginPage.tsx
frontend/src/pages/nurse/: NurseDashboard.tsx  OrderCreate.tsx  RobotDashboard.tsx
frontend/src/pages/patient/: PatientRequestPage.tsx  PatientScreenController.ts
frontend/src/store/: abnormalEventStore.ts  authStore.ts  inventoryStore.ts  robotStore.ts  taskStore.ts
frontend/src/types/: index.ts
robot/control/: CMakeLists.txt  package.xml
robot/control/config/: encoder_odom_params.yaml
robot/control/include/: encoder_odom_node.hpp  motor_bridge_node.hpp
robot/control/launch/: control.launch.py  control_launch.py  encoder_odom.launch.py  motor_bridge.launch.py
robot/control/src/: encoder_odom_node.cpp  motor_bridge_node.cpp
robot/description/: CMakeLists.txt  package.xml
robot/description/launch/: robot_display.launch.py  robot_urdf.launch.py
robot/description/urdf/: robot.urdf.xacro
robot/lidar/cyglidar_d2/: CMakeLists.txt  README.md  package.xml
robot/lidar/cyglidar_d2/d2_ros2/include/: d2_node.h  lidar_2d_topic.h  lidar_3d_topic.h
robot/lidar/cyglidar_d2/d2_ros2/src/: d2_node.cpp  device_status_topic.cpp  lidar_2d_topic.cpp  lidar_3d_topic.cpp
robot/lidar/cyglidar_d2/install/: local_setup.sh  setup.sh
robot/lidar/cyglidar_d2/install/cyglidar_d2_ros2/include/include/: device_status_topic.h
robot/lidar/cyglidar_d2/install/cyglidar_d2_ros2/lib/cyglidar_d2_ros2/: cyglidar_d2_publisher
robot/lidar/cyglidar_d2/install/cyglidar_d2_ros2/share/ament_index/resource_index/package_run_dependencies/: cyglidar_d2_ros2
robot/lidar/cyglidar_d2/install/cyglidar_d2_ros2/share/cyglidar_d2_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot/lidar/cyglidar_d2/install/cyglidar_d2_ros2/share/cyglidar_d2_ros2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  cyglidar_d2_ros2Config.cmake
robot/lidar/cyglidar_d2/install/cyglidar_d2_ros2/share/cyglidar_d2_ros2/launch/: view_cyglidar.launch.py
robot/lidar/cyglidar_d2/launch/: cyglidar.launch.py
robot/lidar/cyglidar_d2/log/: latest_build
robot/lidar/cyglidar_d2/rviz/: cyglidar_config.rviz
robot/lidar/cyglidar_d2/scripts/: create_udev_rules.sh
robot/lidar/cyglidar_d2/sdk/include/: color_encoded_depth_amplitude.h  mapping_point_cloud.h
robot/lidar/cyglidar_d2/sdk/src/: distance_processor.cpp
robot/motor_bridge/: CMakeLists.txt  package.xml
robot/motor_bridge/launch/: motor_bridge.launch.py  teleop.launch.py
robot/motor_bridge/src/: motor_bridge_node.cpp
robot/sensor_components/: CMakeLists.txt  package.xml
robot/sensor_components/config/: ekf.yaml  imu_params.yaml  tof.yaml
robot/sensor_components/inlcude/: imu_node.hpp
robot/sensor_components/launch/: ekf.launch.py  imu.launch.py  sensor_fusion.launch.py
robot/sensor_components/src/: imu_node.cpp  tof_node.cpp
robot/server_bridge/: CMakeLists.txt  package.xml
robot/server_bridge/config/: mqtt_bridge_params.yaml
robot/server_bridge/include/server_bridge/: mqtt_bridge_node.hpp  mqtt_client.hpp
robot/server_bridge/launch/: mqtt_bridge.launch.py
robot/server_bridge/src/: main.cpp  mqtt_bridge_node.cpp  mqtt_client.cpp
robot/slam/: CMakeLists.txt  package.xml
robot/slam/config/: mapping_params.yaml
robot/slam/launch/: slam_mapping.launch.py  slam_mapping_rviz.launch.py
robot/slam/rviz/: mapping_config.rviz
