<?xml version="1.0"?>
<package format="3">
  <name>control</name>
  <version>0.0.1</version>
  <description>Motor bridge and wheel odometry nodes for med_bot</description>

  <maintainer email="you@example.com">minje</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
