<?xml version="1.0"?>
<package format="3">
  <name>motor_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 bridge node between Raspberry Pi and STM32 motor controller</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>teleop_twist_keyboard</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>