cmake_minimum_required(VERSION 3.8)
project(sensor_components)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)

add_executable(imu_node src/imu_node.cpp)
target_include_directories(imu_node PRIVATE
  inlcude
)
ament_target_dependencies(imu_node
  rclcpp
  sensor_msgs
)

install(TARGETS imu_node
  DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY launch config
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
