<?xml version="1.0"?>
<package format="3">
  <name>sensor_components</name>
  <version>0.0.1</version>
  <description>ToF and IMU sensor package for hospital robot</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>