<?xml version="1.0"?>
<package format="3">
  <name>slam</name>
  <version>0.0.1</version>
  <description>SLAM launch and RViz configuration package</description>

  <maintainer email="you@example.com">minje</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>